tests/miniJava/neg/005756_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } int [] java ; class java { }
